--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "imoyao <emailme8@163.com>",
+  "author": "kqc <emailme8@163.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
